fixed z-index problem

--- a/public/try/css/try.scss
+++ b/public/try/css/try.scss
@@ -339,10 +339,12 @@ header {
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 4;
   }
 
   .modal .modal {
 
+    z-index: 4;
     border-radius: 10px;
 
     background: white;
